Added to html added gym pokemon type to form dropdown put modal form in overlay div for styling chnaged gender choice to name removed create gym button fixed card styling and buttons added tool tips to candy buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,19 @@
 body{
     background-color: #0855ae;
 }
+
+
+/*!Still need to code to disappear with modal */
+/* .overlay {
+    position: fixed; /**Positioning and size
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(128,128,128,0.5); /**color
+    z-index: 9;
+} */
+
 .popup{
     background-color: #ffffff;
     width: 420px;
@@ -44,7 +57,7 @@ body{
     margin: 20px 0;
     line-height: 25px;
 }
-a{
+.popup a{
     display: block;
     width: 150px;
     position: relative;
@@ -56,3 +69,17 @@ a{
     text-decoration: none;
     padding: 8px 0;
 }
+
+#poke-info-card h5 {
+font-size: 1.2rem;
+}
+
+#poke-info-card {
+    font-size: .75rem;
+}
+
+.text-center .btn {
+    font-size: .75rem; 
+    padding: .01rem 2rem;
+}
+
