--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body{
     text-align: center;
     z-index: 9;
 }
-.popup button{
+/* .popup {
     display: block;
     margin:  0 0 20px auto;
     background-color: transparent;
@@ -33,8 +33,9 @@ body{
     height: 40px;
     border: none;
     outline: none;
-    cursor: pointer;
-}
+    cursor: pointer; */
+/* } */
+
 .popup h2{
   margin-top: -20px;
 }
@@ -44,7 +45,7 @@ body{
     margin: 20px 0;
     line-height: 25px;
 }
-a{
+.a{
     display: block;
     width: 150px;
     position: relative;
