--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,21 +4,27 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+* {
+    font-family: "Press Start 2P", serif;
+}
+
 body{
-    background-color: #0855ae;
+    background-color: #0d6efd;
 }
 
 
 /*!Still need to code to disappear with modal */
-/* .overlay {
-    position: fixed; /**Positioning and size
+.overlay {
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(128,128,128,0.5); /**color
+    background-color: rgba(128,128,128,0.5);
     z-index: 9;
-} */
+    display: none;
+}
 
 .popup{
     background-color: #ffffff;
@@ -34,7 +40,7 @@ body{
     text-align: center;
     z-index: 9;
 }
-.popup button{
+/* .popup {
     display: block;
     margin:  0 0 20px auto;
     background-color: transparent;
@@ -46,8 +52,9 @@ body{
     height: 40px;
     border: none;
     outline: none;
-    cursor: pointer;
-}
+    cursor: pointer; */
+/* } */
+
 .popup h2{
   margin-top: -20px;
 }
@@ -57,7 +64,8 @@ body{
     margin: 20px 0;
     line-height: 25px;
 }
-.popup a{
+
+.a{
     display: block;
     width: 150px;
     position: relative;
@@ -86,13 +94,14 @@ body{
 }
 
 #poke-info-card h5 {
-font-size: 1.2rem;
+font-size: 1rem;
 text-align: center;
 }
 
 #poke-info-card {
     text-align: center;
     font-size: .75rem;
+    line-height: .5rem;
 }
 
 .text-center .btn {
@@ -105,11 +114,12 @@ text-align: center;
 }
 
 #pokeball-card h5 {
-font-size: 1.3rem;
+font-size: 1.1rem;
 }
 
 #pokeball-card {
-    font-size: .82rem;
+    font-size: .61rem;
+    line-height: .75rem;
 }
 
 #pokeball-card .text-center .btn {
