--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,9 +110,9 @@ text-align: center;
     padding: .01rem 2rem;
 }
 
-#pokeball-card {
+/* #pokeball-card {
     text-align: center;
-}
+} */
 
 #pokeball-card h5 {
 font-size: 1.1rem;
@@ -128,3 +128,15 @@ font-size: 1.1rem;
     padding: .2rem 2rem;
 }
 
+#candy-card h5 {
+    font-size: 1rem;
+}
+
+#candy-card p {
+    font-size: .6rem;
+}
+
+#candy-card a {
+    font-size: 1.2rem;
+    padding: .01rem 2rem;
+}
