--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 
 body{
     background-color: #0d6efd;
+    margin-bottom: 100px;
 }
 
 
@@ -79,15 +80,7 @@ body{
     padding: 8px 0;
 }
 
-
 /* dropdown menu stuff */
-
-
-
-
-
-
-
 
 .card-container  {
     display: flex;
