--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 
 body{
     background-color: #0d6efd;
+    margin-bottom: 100px;
 }
 
 
@@ -21,6 +22,7 @@ body{
     left: 0;
     width: 100vw;
     height: 100vh;
+
     background-color: rgba(128,128,128,0.5);
     z-index: 9;
     display: none;
@@ -78,15 +80,7 @@ body{
     padding: 8px 0;
 }
 
-
 /* dropdown menu stuff */
-
-
-
-
-
-
-
 
 .card-container  {
     display: flex;
@@ -94,14 +88,14 @@ body{
 }
 
 #poke-info-card h5 {
-font-size: 1rem;
+font-size: .80rem;
 text-align: center;
 }
 
 #poke-info-card {
     text-align: center;
-    font-size: .75rem;
-    line-height: .5rem;
+    font-size: .50rem;
+    line-height: .30rem;
 }
 
 .text-center .btn {
@@ -109,9 +103,9 @@ text-align: center;
     padding: .01rem 2rem;
 }
 
-#pokeball-card {
+/* #pokeball-card {
     text-align: center;
-}
+} */
 
 #pokeball-card h5 {
 font-size: 1.1rem;
@@ -127,3 +121,15 @@ font-size: 1.1rem;
     padding: .2rem 2rem;
 }
 
+#candy-card h5 {
+    font-size: 1rem;
+}
+
+#candy-card p {
+    font-size: .6rem;
+}
+
+#candy-card a {
+    font-size: 1.2rem;
+    padding: .01rem 2rem;
+}
